--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Second lib</string>
+    <string name="app_name">Raging Rex III</string>
+    <string name="facebook_app_id">673358091652928</string>
+    <string name="facebook_client_token">6b8f2cda54a5d01b34589299f63b74b4</string>
 </resources>
